--- a/bgeigie_firmware_pio/platformio.ini
+++ b/bgeigie_firmware_pio/platformio.ini
@@ -7,13 +7,13 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-[env:m5stack-core-esp32]
+[env:m5stack-core2]
 platform = espressif32
-board = m5stack-core-esp32
+board = m5stack-core2
 framework = arduino
 monitor_speed = 115200
 lib_deps =
-  M5Stack
+  m5stack/M5Core2@^0.1.2
 
 [common]
 build_flags =
